--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			padding; 40px;
 			"
 		>
-			<img alt="kangwenchang" src="https://kangwenchang.com/logo.png" width="80px" height="80px"
+			<img alt="kangwenchang" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaKtC5r_w94iKD2MH5K2vPejoPIn3NttQ91w&usqp=CAU" width="80px" height="80px"
 		<div>
 		<div><div>
 		<div style="
@@ -18,7 +18,7 @@
 		>
 			<p>我叫刘佩文 </p>
 			<p>我今年十五岁</p>
-			<p>张文昊是我小弟哈哈哈哈哈哈哈哈哈哈</p>
+			<p>性别女</p>
 	
 			
 	</body>
